--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-google-maps/api": "^2.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive": "^9.0.0",
     "react-router-dom": "^6.3.0",
     "uuid": "^8.3.2"
   },
